# video-player

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  plans.txt
cmake/: FindFFmpeg.cmake  FindSDL2.cmake
sources/: CMakeSources.txt
sources/include/vd/: archive.hpp  common.hpp  ffmpeg.hpp  fun.hpp  fwd.hpp  mainwindow.hpp  proto.hpp  sdl.hpp  timeline.hpp
sources/res/: test.qrc
sources/src/: common.cpp  ffmpeg.cpp  main.cpp  mainwindow.cpp  proto.cpp  sdl.cpp  timeline.cpp
sources/ui/: mainwindow.ui
